--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>I AM</h3>
             <h1>Matthew R. Jimoya</h1>
-            <h3 class="school">University of Science and Technology of Southern Philippines <br><span>BS Information Technology</span></h3>
+            <h3 class="school">University of Science and Technology of Southern Philippines Gwapos <br><span>BS Information Technology</span></h3>
 
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
